// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeStatus renders correctly 1`] = `
<TradeSeparator
  disputeActive={false}
  text="payment details"
/>
`;

exports[`TradeStatus renders correctly for confirmPaymentRequired 1`] = `
<TradeSeparator
  disputeActive={false}
  iconColor="#7D675E"
  iconId="alertOctagon"
  text="trade in dispute!"
/>
`;

exports[`TradeStatus renders correctly when there is a dispute 1`] = `
<TradeSeparator
  disputeActive={true}
  iconId="alertOctagon"
  text="trade in dispute!"
/>
`;
